Try to fix svg compression on mobile

--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -18,6 +18,6 @@
 }
 
 .Home-logo {
-  height: 100%;
+  height: auto;
   width: 100%;
 }
